syntax = "proto3";

package companies.v1;

import "google/protobuf/timestamp.proto";

// Enums (Predefined Industry List)
enum IndustryType {
  INDUSTRY_UNSPECIFIED = 0;
  TECHNOLOGY = 1;
  FINANCE = 2;
  HEALTHCARE = 3;
  CONSTRUCTION = 4;
  RETAIL = 5;
  MANUFACTURING = 6;
  LOGISTICS = 7;
}

enum CompanyStatus {
  COMPANY_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  ACTIVE = 2;
  INACTIVE = 3;
  PENDING_REVIEW = 4;
  REJECTED = 5;
  SUSPENDED = 6;
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  ADMIN = 1;
  MANAGER = 2;
  VIEWER = 3;
  UNRECOGNIZED = -1;
}

// Request Messages
message CreateCompanyRequest {
  string company_name = 1;
  string company_id = 2;  // Unique Identifier
  string address = 3;
  string email = 4;
  string phone = 5;
  IndustryType industry = 6;
  optional string description = 7;
  optional string logo_url = 8;
  optional string website_url = 9;
}

message GetCompanyRequest {
  string id = 1;
}

message CompanyMetadata {
  optional string pan = 1;
  optional string gst = 2;
  optional string tan = 3;
  optional int32 strength = 4;
}

message UpdateCompanyRequest {
  string id = 1;
  optional string company_name = 2;
  optional string address = 3;
  optional string email = 4;
  optional string phone = 5;
  optional IndustryType industry = 6;
  optional string description = 7;
  optional string logo_url = 8;
  optional string website_url = 9;
  optional string status = 10;
  optional string updated_by = 11;  // FR-II-001.4: Change tracking
  optional CompanyMetadata metadata = 12;
}

message UpdateCompanyStatusRequest {
  string id = 1;
  CompanyStatus status = 2;
  optional string updated_by = 3;  // FR-II-001.4: Change tracking
}

message DeleteCompanyRequest {
  string id = 1;
}

message VerifyCompanyRequest {
  string id = 1;
  string verification_type = 2;  // "GST" or "MCA"
  bool status = 3;  // true = verified, false = failed
}

// FR-II-001.5: Search and Filter Request
message GetAllCompaniesRequest {
  optional string search = 1;
  optional IndustryType industry = 2;
  optional string status = 3;
  optional int32 page = 4;
  optional int32 limit = 5;
}

// FR-II-001.6: User Management Requests
message LinkUserToCompanyRequest {
  string company_id = 1;
  string user_id = 2;
  UserRole role = 3;
  string assigned_by = 4;
}

message UnlinkUserFromCompanyRequest {
  string company_id = 1;
  string user_id = 2;
}

message UpdateUserRoleRequest {
  string company_id = 1;
  string user_id = 2;
  UserRole role = 3;
}

message GetCompanyUsersRequest {
  string company_id = 1;
}

// Response Messages
message CompanyResponse {
  string id = 1;
  string company_name = 2;
  string company_id = 3;
  string address = 4;
  string email = 5;
  string phone = 6;
  IndustryType industry = 7;
  string status = 8;
  string logo_url = 9;
  string description = 10;
  string website_url = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  optional string updated_by = 14;
  optional string pan = 15;
  optional string gst = 16;
  optional string tan = 17;
  optional int32 strength = 18;
}

message CompanyEmptyResponse {
  bool success = 1;
  string message = 2;
}

// FR-II-001.5: Paginated Response
message GetAllCompaniesResponse {
  repeated CompanyResponse companies = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// FR-II-001.6: User Management Responses
message CompanyUserResponse {
  string id = 1;
  string company_id = 2;
  string user_id = 3;
  string role = 4;
  bool is_active = 5;
  optional string assigned_by = 6;
  google.protobuf.Timestamp created_at = 7;
}

message GetCompanyUsersResponse {
  repeated CompanyUserResponse users = 1;
}

message RegisterCompanyRequest {
  string company_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterCompanyResponse {
  string id = 1;
  string email = 2;
  string message = 3;
}

message VerifyEmailRequest {
  string email = 1;
  string code = 2;
}

message VerifyEmailResponse {
  bool success = 1;
}

message ValidateCredentialsRequest {
  string email = 1;
  string password = 2;
}

message ValidateCredentialsResponse {
  bool success = 1;
  CompanyAuthResponse company = 2;
}

message CompanyAuthResponse {
  string id = 1;
  string email = 2;
  string company_name = 3;
  string company_id = 4;
}
message CompanyContactResponse {
  string id = 1;
  string company_id = 2;
  string state = 3;
  string city = 4;
  string pin_code = 5;
  string linkedin = 6;
  string instagram = 7;
  string twitter = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CompanyBankingResponse {
  string id = 1;
  string company_id = 2;
  string account_holder_name = 3;
  string account_number = 4;
  string bank_name = 5;
  string branch_name = 6;
  string ifsc_code = 7;
  bool is_verified = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message GetCompanyFullDetailsResponse {
  CompanyResponse company = 1;
  optional CompanyContactResponse contact = 2;
  optional CompanyBankingResponse banking = 3;
}

// Service Definition
service CompanyService {
  rpc CreateCompany(CreateCompanyRequest) returns (CompanyResponse);
  rpc GetCompany(GetCompanyRequest) returns (CompanyResponse);
  rpc GetAllCompanies(GetAllCompaniesRequest) returns (GetAllCompaniesResponse);  // FR-II-001.5
  rpc UpdateCompany(UpdateCompanyRequest) returns (CompanyResponse);
  rpc UpdateCompanyStatus(UpdateCompanyStatusRequest) returns (CompanyResponse);
  rpc DeleteCompany(DeleteCompanyRequest) returns (CompanyEmptyResponse);
  rpc VerifyCompany(VerifyCompanyRequest) returns (CompanyResponse);
  rpc GetCompanyFullDetails(GetCompanyRequest) returns (GetCompanyFullDetailsResponse);
  // FR-II-001.6: User Management RPCs
  rpc LinkUserToCompany(LinkUserToCompanyRequest) returns (CompanyUserResponse);
  rpc UnlinkUserFromCompany(UnlinkUserFromCompanyRequest) returns (CompanyEmptyResponse);
  rpc UpdateUserRole(UpdateUserRoleRequest) returns (CompanyUserResponse);
  rpc GetCompanyUsers(GetCompanyUsersRequest) returns (GetCompanyUsersResponse);

  // auths
  rpc Register(RegisterCompanyRequest) returns (RegisterCompanyResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ValidateCredentials(ValidateCredentialsRequest) returns (ValidateCredentialsResponse);



}