import {NextRequest, NextResponse} from 'next/server';
import {createCompanyGrpcClient} from '@/lib/grpc-client';

export async function POST(request: NextRequest) {
    try {
        const {searchParams} = new URL(request.url);
        const updateType = searchParams.get('type') || 'general';
        console.log('Updating company with type:', updateType);
        const body = await request.json();
        console.log('body', body)
        // ID is required for any update
        const id = body.id || body.companyId;
        if (!id) {
            return NextResponse.json({message: 'Company ID is required'}, {status: 400});
        }

        const client = await createCompanyGrpcClient();
        let response;

        // --- 1. General Company Info Update ---
        if (updateType === 'general') {
            const updateRequest = {
                id: body.id,
                company_name: body.companyName,
                description: body.description,
                website_url: body.websiteUrl,
                industry: body.domain,
                logo_url: body.logoUrl,
                metadata: body.metadata
            };


            response = await new Promise((resolve, reject) => {
                client.UpdateCompany(updateRequest, (err, res) => {
                    if (err) reject(err);
                    else resolve(res);
                });
            });
        }

        // --- 2. Contact Info Update ---
        else if (updateType === 'contact') {

            // A. Update Base Company Fields (Phone, Address, Email)
            await new Promise((resolve, reject) => {
                client.UpdateCompany({
                    id: body.companyId,
                    address: body.address,
                    phone: body.phone,
                    email: body.email,
                }, (err, res) => {
                    if (err) reject(err);
                    else resolve(res);
                });
            });

            // B. Update Extended Contact Details
            response = await new Promise((resolve, reject) => {
                client.UpdateCompanyContact({
                    companyId: body.companyId,
                    state: body.state,
                    city: body.city,
                    pin_code: body.pinCode,
                    linkedin: body.linkedin,
                    instagram: body.instagram,
                    twitter: body.twitter,
                }, (err, res) => {
                    if (err) reject(err);
                    else resolve(res);
                });
            });
        }

        // --- 3. Banking Info Update ---
        else if (updateType === 'banking') {
            response = await new Promise((resolve, reject) => {
                client.UpdateCompanyBanking({
                    companyId: body.companyId,
                    account_holder_name: body.accountHolderName,
                    account_number: body.accountNumber,
                    bank_name: body.bankName,
                    branch_name: body.branchName,
                    ifsc_code: body.ifscCode,

                }, (err, res) => {
                    if (err) reject(err);
                    else resolve(res);
                });
            });
        } else {
            return NextResponse.json({message: 'Invalid update type'}, {status: 400});
        }

        return NextResponse.json({success: true, data: response});

    } catch (error: any) {
        console.error('Error updating company:', error);
        return NextResponse.json(
            {
                success: false,
                message: error.details || 'Failed to update company information'
            },
            {status: 500}
        );
    }
}